<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_margin="@dimen/margin_xsmall"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="0dp"
    android:background="?android:attr/selectableItemBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.percent.PercentRelativeLayout
            android:id="@+id/cafe_info"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/image"
                android:layout_margin="@dimen/padding_very_small"
                app:layout_widthPercent="30%"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_width"
                android:contentDescription="@string/swiggy_image" />
            <LinearLayout
                app:layout_widthPercent="70%"
                android:layout_toRightOf="@+id/image"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/margin_xsmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/outlet_name"
                    android:text="@string/harry_cafe"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:padding="@dimen/padding_small"
                    android:textColor="@color/black"
                    android:textSize="@dimen/outlet_name_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/cuisine_type"
                    android:text="@string/cafe"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:padding="@dimen/padding_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    android:background="@color/hdfc_light_grey"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/margin_xsmall"
                    android:layout_marginRight="@dimen/margin_xsmall"
                    android:layout_height="1dp"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/cost_for_two"
                        android:gravity="center"
                        android:text="@string/cost_for_two"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:padding="@dimen/padding_small"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <RelativeLayout
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/rating"
                            android:text="@string/rating"
                            android:maxLines="1"
                            android:gravity="center"
                            android:ellipsize="end"
                            android:padding="@dimen/padding_small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <ImageView
                            android:layout_toRightOf="@+id/rating"
                            android:src="@drawable/ic_star"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>
                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/delivery_time"
                        android:gravity="center"
                        android:text="@string/cost_for_two"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:padding="@dimen/padding_small"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </android.support.percent.PercentRelativeLayout>
        <View
            android:layout_below="@+id/cafe_info"
            android:id="@+id/seperator"
            android:layout_margin="@dimen/padding_small"
            android:background="@color/hdfc_light_grey"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="1dp"/>
        <TextView
            android:layout_below="@+id/seperator"
            android:id="@+id/outlet_count"
            android:visibility="gone"
            android:ellipsize="end"
            android:maxLines="1"
            android:gravity="center"
            android:text="@string/variouss_outlets"
            android:padding="@dimen/padding_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_below="@+id/outlet_count"
            android:orientation="vertical"
            android:id="@+id/chain_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>